--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,11 @@ spring.sql.init.encoding=UTF-8
 # spring.sql.init.schema-locations=classpath:db/1.create-schema.sql
 # spring.sql.init.data-locations=classpath:db/2.insert-data.sql
 
-## postgreSQL
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.datasource.url=${DATABASE_URL_SPRINGBOOT:jdbc:postgresql://localhost:5432/postgres}
-# spring.datasource.username=${DATABASE_USER:postgres}
-# spring.datasource.password=${DATABASE_PASSWORD:postgres}
+##postgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATABASE_URL_SPRINGBOOT:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.username=${DATABASE_USER:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:postgres}
 
 
 ### Windowsコンソール出力
